# whisper-linux

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  whisper-typewriter.service
src/whisper_typewriter/: __main__.py  audio.py  config.py  hotkey.py  main.py  refiner.py  transcriber.py  tray.py  typer.py
